@@ -1,43 +1,49 @@
 package com.mbapps.fc.provider.config;
 
-import org.springframework.boot.web.servlet.FilterRegistrationBean;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
 import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource; // Import this
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.filter.CorsFilter;
-import org.springframework.web.servlet.config.annotation.EnableWebMvc;
+import org.springframework.web.servlet.config.annotation.EnableWebMvc; // Keep if you use other WebMvc features
 
 import java.util.Arrays;
+import java.util.List; // Import List
 
 @Configuration
-@EnableWebMvc
+@EnableWebMvc // Keep this if you have other Spring MVC configurations, otherwise it might be optional
 public class WebConfig {
 
+    // This bean will be picked up by Spring Security's CORS integration
     @Bean
-    public FilterRegistrationBean<CorsFilter> corsFilter() {
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        CorsConfiguration config = new CorsConfiguration();
-        config.setAllowCredentials(true);
-        config.addAllowedOrigin("http://localhost:5173");
-        config.addAllowedOrigin("https://thecozycookbookwebui.vercel.app");
-        config.setAllowedHeaders(Arrays.asList(
+    public CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration configuration = new CorsConfiguration();
+        configuration.setAllowCredentials(true); // Allow cookies, authorization headers etc.
+        configuration.setAllowedOrigins(List.of( // Use List.of for immutable list
+                "http://localhost:5173",
+                "https://thecozycookbookwebui.vercel.app"
+        ));
+        configuration.setAllowedHeaders(Arrays.asList(
                 HttpHeaders.AUTHORIZATION,
                 HttpHeaders.CONTENT_TYPE,
                 HttpHeaders.ACCEPT
         ));
-        config.setAllowedMethods(Arrays.asList(
+        configuration.setAllowedMethods(Arrays.asList(
                 HttpMethod.GET.name(),
                 HttpMethod.POST.name(),
                 HttpMethod.PUT.name(),
-                HttpMethod.DELETE.name()
+                HttpMethod.DELETE.name(),
+                HttpMethod.OPTIONS.name() // IMPORTANT: Always allow OPTIONS for preflight requests
         ));
-        config.setMaxAge(7200L);
-        source.registerCorsConfiguration("/**", config);
-        FilterRegistrationBean<CorsFilter> bean = new FilterRegistrationBean<>(new CorsFilter(source));
-        bean.setOrder(-102);
-        return bean;
+        configuration.setMaxAge(7200L); // Cache preflight response for 2 hours
+
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", configuration); // Apply to all paths
+        return source;
     }
+
+    // Removed the FilterRegistrationBean<CorsFilter> bean from here,
+    // as Spring Security will handle the CorsConfigurationSource directly.
 }
